--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<uses-permission android:name="android.permission.CAMERA"/>
-<uses-permission android:name="android.permission.FLASHLIGHT"/>
     <application
-        android:label="toggle_button"
+        android:label="switch_project"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
